--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,3 +17,16 @@ checks:
         fix_identation_4spaces: true
         fix_doc_comments: true
 
+build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
+    coverage:
+      tests:
+        override:
+          - command: ./vendor/bin/phpunit
+            coverage:
+              file: build/logs/clover.xml
+              format: clover
