--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "php": "^7.3",
         "illuminate/database": "^7.0|^8.0",
         "illuminate/notifications": "^7.0|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "laravel/legacy-factories": "^1.0"
+        "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0",
