--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
         "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^9.1"
     },
@@ -49,7 +50,9 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "lint": "vendor/bin/php-cs-fixer fix",
+        "lint-dry": "vendor/bin/php-cs-fixer fix --dry-run --diff-format=udiff"
     },
     "config": {
         "sort-packages": true
