--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,12 +14,14 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.4]
-                laravel: [8.*]
+                php: [7.3, 7.4]
+                laravel: [6.*, 7.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
                     - laravel: 8.*
                       testbench: 6.*
+                    - laravel: 7.*
+                      testbench: 5.*
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
