--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "illuminate/database": "^7.0|^8.0",
         "illuminate/notifications": "^7.0|^8.0",
         "illuminate/support": "^7.0|^8.0"
