--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.3, 7.4]
+                php: [8.0, 7.3, 7.4]
                 laravel: [7.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
@@ -22,6 +22,9 @@ jobs:
                       testbench: 6.*
                     - laravel: 7.*
                       testbench: 5.*
+                exclude:
+                    -   php: 8.0
+                        dependency-version: prefer-lowest
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
