--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,17 +14,26 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.0, 7.3, 7.4]
-                laravel: [7.*, 8.*]
+                php: [7.3, 7.4, 8.0, 8.1]
+                laravel: [7.*, 8.*, 9.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
+                    - laravel: 9.*
+                      testbench: 7.*
                     - laravel: 8.*
                       testbench: 6.*
                     - laravel: 7.*
                       testbench: 5.*
                 exclude:
+                    -   php: 8.1
+                        laravel: 8.*
+                        dependency-version: prefer-lowest
                     -   php: 8.0
                         dependency-version: prefer-lowest
+                    -   php: 7.4
+                        laravel: 9
+                    -   php: 7.3
+                        laravel: 9
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
@@ -41,9 +50,23 @@ jobs:
                   php-version: ${{ matrix.php }}
                   coverage: xdebug
 
+            - name: Get Composer cache cirectory
+              id: composer-cache
+              run: |
+                echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+            - name: Cache Composer packages
+              uses: actions/cache@v2
+              with:
+                path: ${{ steps.composer-cache.outputs.dir }}
+                key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+                restore-keys: |
+                  ${{ runner.os }}-composer-
+
             - name: Install dependencies
               run: |
                   composer require "illuminate/support:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
                   composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+
             - name: Execute tests
               run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
