--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,14 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/database": "^7.0|^8.0",
-        "illuminate/notifications": "^7.0|^8.0",
-        "illuminate/support": "^7.0|^8.0"
+        "php": "^7.3|^7.4|^8.0|^8.1",
+        "illuminate/database": "^9.0",
+        "illuminate/notifications": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.17",
-        "orchestra/testbench": "^5.0|^6.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
         "phpunit/phpunit": "^9.1"
     },
     "autoload": {
@@ -52,7 +52,7 @@
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "lint": "vendor/bin/php-cs-fixer fix",
-        "lint-dry": "vendor/bin/php-cs-fixer fix --dry-run --diff-format=udiff"
+        "lint-dry": "vendor/bin/php-cs-fixer fix --dry-run"
     },
     "config": {
         "sort-packages": true
