--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,7 +24,13 @@ jobs:
                     -   php: 8.1
                         laravel: 8.*
                         dependency-version: prefer-lowest
+                    -   php: 8.1
+                        laravel: 7.*
                     -   php: 8.0
+                        laravel: 8.*
+                        dependency-version: prefer-lowest
+                    -   php: 8.0
+                        laravel: 7.*
                         dependency-version: prefer-lowest
                     -   php: 7.4
                         laravel: 9.*
