--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,11 @@
         "illuminate/support": "^7.0|^8.0|^9.0"
     },
     "require-dev": {
+        "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "orchestra/testbench": "^5.0|^6.0|^7.0",
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": "^9.1",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
@@ -51,8 +53,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "lint": "vendor/bin/php-cs-fixer fix",
-        "lint-dry": "vendor/bin/php-cs-fixer fix --dry-run"
+        "lint": "vendor/bin/php-cs-fixer fix && vendor/bin/phpcs --colors --report-full",
+        "lint-dry": "vendor/bin/php-cs-fixer fix --dry-run && vendor/bin/phpcs --colors --report-full"
     },
     "config": {
         "sort-packages": true
