--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
     ],
     "require": {
         "php": "^7.3|^7.4|^8.0|^8.1",
-        "illuminate/database": "^7.0|^8.0|^9.0",
-        "illuminate/notifications": "^7.0|^8.0|^9.0",
-        "illuminate/support": "^7.0|^8.0|^9.0"
+        "illuminate/database": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/notifications": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
