--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,15 +11,8 @@ jobs:
             fail-fast: false
             matrix:
                 php: [7.3, 7.4, 8.0, 8.1]
-                laravel: [7.*, 8.*, 9.*]
+                laravel: [7.*, 8.*, 9.*, 10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
-                include:
-                    - laravel: 9.*
-                      testbench: 7.*
-                    - laravel: 8.*
-                      testbench: 6.*
-                    - laravel: 7.*
-                      testbench: 5.*
                 exclude:
                     -   php: 8.1
                         laravel: 8.*
@@ -32,6 +25,12 @@ jobs:
                     -   php: 8.0
                         laravel: 7.*
                         dependency-version: prefer-lowest
+                    -   php: 8.0
+                        laravel: 10.*
+                    -   php: 7.4
+                        laravel: 10.*
+                    -   php: 7.3
+                        laravel: 10.*
                     -   php: 7.4
                         laravel: 9.*
                     -   php: 7.3
@@ -67,7 +66,7 @@ jobs:
 
             - name: Install dependencies
               run: |
-                  composer require "illuminate/database:${{ matrix.laravel }}" "illuminate/notifications:${{ matrix.laravel }}" "illuminate/support:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+                  composer require "illuminate/database:${{ matrix.laravel }}" "illuminate/notifications:${{ matrix.laravel }}" "illuminate/support:${{ matrix.laravel }}" --no-interaction --no-update
                   composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
 
             - name: Execute tests
