--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -13,12 +13,12 @@ jobs:
               run: sudo apt-get update --fix-missing
 
             - name: Checkout code
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
-                php-version: 8.1
+                php-version: 8.2
 
             - name: Get Composer cache cirectory
               id: composer-cache
@@ -26,7 +26,7 @@ jobs:
                 echo "::set-output name=dir::$(composer config cache-files-dir)"
 
             - name: Cache Composer packages
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                 path: ${{ steps.composer-cache.outputs.dir }}
                 key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -39,5 +39,5 @@ jobs:
 
             - name: Execute linting
               run: |
-                vendor/bin/php-cs-fixer fix --dry-run
+                PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix --dry-run
                 vendor/bin/phpcs --colors --report-full
