--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.3, 7.4, 8.0, 8.1, 8.2]
+                php: [8.0, 8.1, 8.2]
                 laravel: [7.*, 8.*, 9.*, 10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 exclude:
@@ -34,14 +34,6 @@ jobs:
                         dependency-version: prefer-lowest
                     -   php: 8.0
                         laravel: 10.*
-                    -   php: 7.4
-                        laravel: 10.*
-                    -   php: 7.3
-                        laravel: 10.*
-                    -   php: 7.4
-                        laravel: 9.*
-                    -   php: 7.3
-                        laravel: 9.*
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
