--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,29 +10,19 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.0, 8.1, 8.2]
-                laravel: [7.*, 8.*, 9.*, 10.*]
+                php: [8.1, 8.2]
+                laravel: [10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 exclude:
                     -   php: 8.2
-                        laravel: 9.*
+                        laravel: 10.*
                         dependency-version: prefer-lowest
                     -   php: 8.2
-                        laravel: 8.*
-                    -   php: 8.2
-                        laravel: 7.*
+                        laravel: 10.*
                     -   php: 8.1
-                        laravel: 8.*
+                        laravel: 10.*
                         dependency-version: prefer-lowest
                     -   php: 8.1
-                        laravel: 7.*
-                    -   php: 8.0
-                        laravel: 8.*
-                        dependency-version: prefer-lowest
-                    -   php: 8.0
-                        laravel: 7.*
-                        dependency-version: prefer-lowest
-                    -   php: 8.0
                         laravel: 10.*
 
         name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.dependency-version }}
