--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.1, 8.2]
+                php: [8.1, 8.2, 8.3]
                 laravel: [10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
 
