--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
     ],
     "require": {
         "php": "^8.1|^8.2|^8.3",
-        "illuminate/database": "^7.0|^8.0|^9.0|^10.0",
-        "illuminate/notifications": "^7.0|^8.0|^9.0|^10.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
+        "illuminate/database": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/notifications": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.0",
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "phpunit/phpunit": "^9.1",
         "squizlabs/php_codesniffer": "^3.6"
     },
