--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "adamwojs/php-cs-fixer-phpdoc-force-fqcn": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^9.1",
+        "phpunit/phpunit": "^9.1|^10.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
