Fix phpunit config

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,5 +12,6 @@
     </source>
     <php>
         <env name="APP_KEY" value="base64:yk+bUVuZa1p86Dqjk9OjVK2R1pm6XHxC6xEKFq8utH0="/>
+        <env name="DB_CONNECTION" value="testing"/>
     </php>
 </phpunit>
